src/sass/components/_products.scss
.products-page {
  width: 100vw;
  height: calc(100vh - #{$header-height});
  padding: 0 32px;
  position: relative;
  .product-list-header {
    height: 32px;
    padding: 4px;
    display: flex;
    justify-content: right;
    align-items: center;
    .options-container {
      display: flex;
      justify-content: right;
      align-items: center;
    }
  }
}

.product-list {
  width: 100%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  gap: 5px;
  .product-list-item-wrapper {
    border: 1px solid rgba(66, 66, 67, 0.2);
    width: calc(50% - 5px);
    height: 350px;
    padding: 8px;
    display: flex;
    flex-direction: column;
    .product-list-item-image-wrapper {
      display: flex;
      justify-content: center;
      align-items: center;
      height: 80%;
      overflow: hidden;
      img {
        height: 100%;
      }
      &.horizontal {
        img {
          height: auto;
          width: 100%;
        }
      }
    }
    .product-list-item-description-wrapper {
      display: grid;
      grid-template-columns: 8fr 2fr;
      grid-template-rows: 1fr 1fr;
      height: 20%;
      padding: 4px;
      .brand-wrapper {
        display: flex;
        justify-content: left;
        align-items: center;
        grid-row: 1;
        grid-column: 1;
        font-size: 0.8rem;
      }
      .name-wrapper {
        grid-row: 2;
        grid-column: 1 / 3;
        font-size: 1rem;
      }
      .price-wrapper {
        display: flex;
        justify-content: right;
        align-items: center;
        grid-row: 1;
        grid-column: 2;
        font-size: 1rem;
      }
    }
  }
  .loading-animation-wrapper {
    width: 100%;
    height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
    .svg-wrapper {
      scale: 0.5;
      svg {
        scale: 1;
      }
    }
  }
}

